@@ -55,7 +55,7 @@ For large scale problems it is suggested to use the dual algorithm. Using the pe
 }
 
 \references{De Leeuw, J. & Mair, P. (2009). Multidimensional scaling using majorization: 
-The R package smacof. Journal of Statistical Software, 31(3), 1-30, \url{http://www.jstatsoft.org/v31/i03/}}
+The R package smacof. Journal of Statistical Software, 31(3), 1-30, \url{https://www.jstatsoft.org/v31/i03/}}
 \author{Jan de Leeuw and Patrick Mair}
 
 \seealso{\code{\link{smacofRect}}, \code{\link{smacofIndDiff}}, \code{\link{smacofSym}},\code{\link{smacofConstraint}}}
